feat(indexer): update the structure of chips merged
